# two-tower-pytorch

./: README.md  TwoTower.ipynb  best_model.onnx  best_model.pt  config.json  main.py  pyproject.toml
model/: TwoTower.py
utils/: data.py  predict.py  train.py
